--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
   <!-- The value of a property is accessed via ${} -->
   <property name="src.dir" location="src" />
   <property name="build.dir" location="bin" />
+  <property name="docs.dir" location="docs" />
   <property name="dist.dir" location="dist" />
 
   <path id="class.path">
@@ -30,7 +31,7 @@
 
   <!-- Compiles the java code (including the usage of library for JUnit -->
   <target name="compile" depends="clean, makedir">
-    <javac srcdir="${src.dir}" destdir="${build.dir}">
+    <javac includeantruntime="false" srcdir="${src.dir}" destdir="${build.dir}">
       <classpath refid="class.path" />
     </javac>
   </target>
